# API_Scraping_App

./: .env  .env.sample  .gitignore  .pylintrc  Dockerfile  GitHubCopilot.md  README.md  docker-compose.yml  insert_api_data.py  main.py  project_plan.md  projectplan.md  pulltrends.py  pyproject.toml  requirements-ml.txt  requirements.txt  script.py  set_python_path.ps1  setup_project.ps1  test_end_to_end.py  test_harness.py  verify_setup.py  web_interface.py
.github/workflows/: main.yml
ai_workers/: __init__.py  code_custodian.py  model_worker.py
api/: __init__.py  fetch_guardian_api.py  fetch_news_api.py  fetch_pytrends.py  fetch_reddit_data.py
config/: __init__.py  api_config.py  cuda.ps1  db_config.py  error_logging.py  model_config.py  monitoring.py
database/: articles_repository.py  db_connection.py  insert_data.py  setup_main_db.py
database/init/: 01-init.sql  (+1 more)
langchain_service/: Dockerfile  __init__.py  base_model.py  config.py  langchain.ps1  local_llm_setup.py  model_verify.py  requirements.txt
pytrends_lib/: data_cleaning.py  trends_integration.py
pytrends_tool/: LICENSE  README.md  fetch_trending_topics.py
services/: analytics_service.py  guardian_service.py  news_api_service.py  reddit_service.py  sentiment_service.py  visualization_service.py
tests/: conftest.py  test_articles_repository.py  test_code_custodian.py  test_guardian_service.py  test_llm_integration.py  test_local_llm.py  test_model_integration.py  test_model_loading.py  test_model_verify.py  verify_setup.py  worker.py
utils/: memory_utils.py
web/: __init__.py  interface.py
(+16 files in other folders)
